--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
