--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=America/Fortaleza
 # server
 server.port=${PORT:8080}
 server.error.include-stacktrace=never
+
+# docs
+springdoc.api-docs.path=/api-docs
+
