--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>2.0.3</version>
+				<configuration>
+					<appName>the-resident-zombie-codeminer</appName>
+					<processTypes>
+						<web>java $JAVA_OPTS -Dspring.profiles.active=prod -cp target/classes:target/dependency/* com.codeminer42.trz.TheResidentZombieApplication</web>
+					</processTypes>
+					<jdkVersion>${java.version}</jdkVersion>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
