--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<version>1.2.32</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.200</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
